# kata-cpp

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  SConstruct  fabfile.py  genindex.html  index.html  search.html  searchindex.js
_sources/: index.rst.txt
_sources/language/: cpp_interview.rst.txt  cpp_thread.rst.txt
_sources/tool/: cmake.rst.txt
algorithm/: linear_regression.cpp  tema.cpp  tma.cpp  token_bucket.cpp
doc/: README.md  fabfile.py
doc/source/: conf.py  links.ref  tags.ref
doc/source/_build/doctrees/: environment.pickle  index.doctree  interview.doctree  overview.doctree  resume.doctree
doc/source/_build/doctrees/algorithm/: accrual-failure-detector.doctree  al_interview.doctree  data_compress.doctree  data_structure.doctree  ds_interview.doctree  index.doctree  linked_list.doctree  lsm-tree.doctree  raft.doctree  reservoir-sampling.doctree  tree.doctree
doc/source/_build/doctrees/architecture/: architect_interview.doctree  consensus.doctree  ddd.doctree  design_patterns.doctree  design_principles.doctree  distribution.doctree  index.doctree  instant_message.doctree  intercepting_filter.doctree  micro_service.doctree  network_interview.doctree  observer.doctree  raft.doctree  reactor.doctree  service_mesh.doctree  web_conference.doctree  zab.doctree
doc/source/_build/doctrees/language/: cpp.doctree  cpp_evolution.doctree  cpp_interview.doctree  cpp_lambda.doctree  cpp_memory.doctree  cpp_object_model.doctree  cpp_rvalue.doctree  cpp_server.doctree  cpp_stl.doctree  cpp_thread.doctree  go.doctree  index.doctree  java.doctree  java_bytecode.doctree  java_classloader.doctree  java_collection.doctree  java_concurrency.doctree  java_interview.doctree  javascript.doctree  js_async.doctree  js_interview.doctree  js_promise.doctree  js_test.doctree  js_visualize.doctree  nodejs.doctree  python.doctree
doc/source/_build/doctrees/math/: bayes.doctree  index.doctree  lse.doctree
doc/source/_build/doctrees/mmp/: index.doctree  mmp_basic.doctree  mmp_config.doctree  mmp_endpoint.doctree  mmp_main.doctree  mmp_pdu.doctree  mmp_rtp.doctree  mmp_turn.doctree
doc/source/_build/doctrees/oss/: cassandra.doctree  freeswitch.doctree  index.doctree  kafka.doctree  redis.doctree
doc/source/_build/doctrees/pattern/: active_object.doctree  architecture_pattern.doctree  concurrency_pattern.doctree  index.doctree  mdd.doctree  monitor_object.doctree  overview.doctree  reactor.doctree
doc/source/_build/doctrees/platform/: g1.doctree  gc.doctree  index.doctree  jdk.doctree  jvm.doctree  ubuntu.doctree
doc/source/_build/doctrees/thinclient/: app_share.doctree  audio_443.doctree  audio_mgr.doctree  cmsc.doctree  cmsc_MediaEngInst.doctree  cmsc_api.doctree  cmsc_asm.doctree  cmsc_connection_monitor.doctree  cmsc_flowrtp.doctree  cmsc_mediamgr.doctree  cmsc_roap.doctree  cmsc_session_mgr.doctree  cmsc_signal_mgr.doctree  cscc.doctree  cscc_api.doctree  cscc_clientsession.doctree  disciplines_on_code_development.doctree  how_to.doctree  index.doctree  metrics.doctree  protocols.doctree  qos.doctree  wca.doctree  wcb.doctree  wcb_client.doctree  wcb_dtls.doctree  wcb_flowrtp.doctree  wcb_ice.doctree  wcb_media_stats.doctree  wcb_message.doctree  wcb_mqe.doctree  wcb_rtp.doctree  wcb_sdp.doctree  wcb_source.doctree  web_client_bridge.doctree
doc/source/_build/doctrees/tool/: cmake.doctree  git.doctree  index.doctree
doc/source/_build/doctrees/utiltp/: index.doctree  utiltp_basic.doctree
doc/source/_build/html/: .buildinfo  genindex.html  index.html  interview.html  objects.inv  overview.html  resume.html  search.html  searchindex.js
doc/source/_build/html/_sources/: index.rst.txt  interview.rst.txt  overview.rst.txt  resume.rst.txt
doc/source/_build/html/algorithm/: accrual-failure-detector.html  al_interview.html  data_compress.html  data_structure.html  ds_interview.html  index.html  linked_list.html  (+4 more)
doc/source/_static/: multisource_simulcast_negotiation_specification.docx
doc/source/language/: cpp.rst  cpp_lambda.rst  cpp_server.rst  index.rst
docker/: Dockerfile  Dockerfile-clang  Dockerfile-simple  Dockerfile.boost  README.md  build-boost.sh  build.sh  makefile  run-boost.sh  start.sh
exam/: CMakeLists.txt  boost_asio_chat.cpp  boost_asio_strand.cpp  boost_asio_timer.cpp  boost_asio_timer_1.cpp  boost_asio_timer_2.cpp  boost_asio_udp.cpp  boost_lockfree_queue.cpp  boost_memory.cpp  boost_python.cpp  calculator.cpp  crtp_demo.cpp  echo_client_ev.cpp  enable_shared_demo.cpp  load_reporter.h  run_example.cpp  run_example.h  tiny_command.cpp  tiny_command.h  udpclient.cpp  udpserver.cpp
kata/: CMakeLists.txt  UnitTestResult.xml  cache_data.csv  conanfile.txt
kata/algorithm/: CMakeLists.txt  ema.cpp  leaky_bucket.cpp
kata/chatgpt/: CMakeLists.txt  README.md  build.sh  chatgpt_demo.cpp  conanfile.txt
kata/example/exam/: boost_asio_timer.cpp  boost_queue.cpp  boost_thread_pool.cpp  crtp_demo.cpp  std_visit_demo.cpp  tiny_command.cpp  tiny_command.h
kata/example/test/: CMakeLists.txt  chrono_duration_test.cpp  emcpp_7.cpp  leap_year_test.cpp  std_find_test.cpp  std_optional_test.cpp  struct_test.cpp  template_test.cpp  test_class.h  time_point_test.cpp
kata/pattern/: CMakeLists.txt  overload_pattern.cpp  state_pattern.cpp  time_range_queue.cpp
kata/src/: CMakeLists.txt  kata101_add_sum.cpp
kata/test/: CMakeLists.txt  TinyUtilTest.cpp  UnitTest.cpp  waltertest.cpp
language/: cpp.html  cpp_evolution.html  cpp_interview.html  cpp_lambda.html  cpp_memory.html  cpp_object_model.html  cpp_rvalue.html  cpp_server.html  cpp_stl.html  cpp_thread.html
note/: cpp_variable.md  effective_cpp.mm  modern_cpp.md  word_bank_note.md
pattern/: state_pattern.h  time_range_queue.cpp
test/: CMakeLists.txt  emcpp_7.cpp  invoke_test.cpp  ntptime_test.cpp  override_test.cpp  quick_test.cpp  smart_ptr_test.cpp  std_find_test.cpp  std_map_test.cpp  std_optional_test.cpp  std_set_test.cpp  struct_test.cpp  template_test.cpp  test_case.h  test_class.cpp  test_class.h  timer_test.cpp  unit_test.cpp  waltertest.cpp
tool/: cmake.html  git.html  index.html
(+228 files in other folders)
